tests/good/control_flow/control_flow_check_4.lat
int main() {
    // 0
    int x = 0;
    if (x == 1) {
        return 1;
    }
    else if (x == 2) {
        return 2;
    }
    else {
        return 3;
    }
}