tests/bad/other/bad0081.lat
int main() { 
  int[] arr;
  arr.length = 2;
  return 0;
}
